# master-os-ai

./: .gitignore  LICENCE.md  README.MD  package-lock.json  package.json
backend/: .gitignore  main.py  package.json  requirements.txt  setup.py  test_rust_direct.py
backend/agent/: core.py
backend/database/: init.py
backend/llm/: llm_client.py  prompt_engine.py  react_agent.py
backend/prompts/: react_prompt.py
backend/routes/: agent.py  chat.py  file_system.py  llm_client.py  llm_response.py
backend/tools/: add_numbers.py  advanced_gui_tools.py  agent_info.py  basic.py  calculator.py  complete_tools_registry.py  echo.py  file_manager.py  office_ops.py  os_actions.py  smart_router.py  system_control.py  tools.py  vision.py  weather.py
backend/utility/: dependencies.py  extract_json.py  get_llm_client.py  index_files_background.py  state.py
electron/: package-lock.json  package.json  tsdown.config.ts
electron/dist-electron/: main.mjs  multipart-parser-v8S9Iu0H.mjs  preload.cjs
electron/src/: constants.ts  main.ts  preload.ts
electron/src/ipc/: ai.ts  files.ts  input.ts  log.ts  tray.ts  types.ts
electron/src/process/: pythonProcess.ts  rustProcess.ts
electron/src/security/: session.ts
electron/src/sideCars/python/: heath.ts  process.ts
electron/src/sideCars/rust/: process.ts
electron/src/tray/: trayManager.ts
electron/src/windows/: appWindow.ts  searchWindow.ts
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.vue  main.ts
frontend/src/components/chatInterface/: index.vue
frontend/src/components/chatInterface-proto/: index.vue
frontend/src/components/sidebar/: index.vue
frontend/src/composables/: useAI.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/types/: electron.d.ts
frontend/src/views/: GlobalInput-proto.vue  HomeView.vue
rust/: .gitignore  Cargo.toml  readme.md
rust/.cargo/: config.toml
rust/src/: inference.rs  main.rs  model.rs  state.rs
rust/src/handlers/: load.rs  mod.rs  stream.rs
