[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
futures = "0.3"
tokio-stream = "0.1.18"


llama-cpp-2 = { version = "0.1.130",default-features = false,  features = [ "sampler"] }
rand = "0.9.2" 

# Tracing/Logging (Essential for Prod)
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = "0.7"

[features]
# e.g., cargo build --no-default-features --features vulkan
# default = ["cuda"]
vulkan = ["llama-cpp-2/vulkan"]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
